Switch to the foreign-preview branch, merge all modules, remove the Java module